[project]
name = "dataspine"
version = "0.1.0"
description = "Python client for Dataspine"
authors = [{ name="Dataspine", email="info@dataspine.de" }]
dependencies = [
    "pydantic>=1.10.2",
    "requests>=2"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest"]
aws = ["boto3>=1.28", "botocore>=1.31"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
